--- a/src/pages/Batch/Batch.page.module.css
+++ b/src/pages/Batch/Batch.page.module.css
@@ -127,6 +127,35 @@ td:first-child {
   border-left: 1px solid #cecfd5;
 }
 
+.actionContainer {
+  position: relative;
+}
+.actions {
+  width: 170px;
+  background: #FFF;
+  padding: 5px 5px;
+  margin-bottom: 15px;
+
+  position: absolute;
+  z-index: 2;
+
+  top: 35px;
+  right: 40px;
+}
+.action {
+  display: flex;
+  padding: 15px 15px;
+  align-items: center;
+  cursor: pointer;
+}
+.action:hover {
+  background: #f0f0f2;
+}
+.actionIcon {
+  margin-right: 25px;
+}
+
+
 
 @media screen and (max-width: 1300px) { 
     .container {
